On Remet le logo

--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
 
 
     <div class="container">
-        <table style="height: 30px;" width="609">
-            <!-- <tbody>
-            <tr>
-            <td style="width: 800px; text-align: center; vertical-align: top;"><img src="images/ImagesdeFred/SchlunksLogo.png" alt="" />
+        <!-- <table style="height: 30px;" width="609"> -->
+            
+            <div class="row">
+                <div class="col">
+             style="width: 800px; text-align: center; vertical-align: top;"><img src="images/ImagesdeFred/SchlunksLogo.png" alt="" />
             <table style="height: 136px;" width="866">
-            <tbody> -->
-            <!-- <tr> -->
+            </div>
+            </div>
 
             <div class="row">
 
