--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 
     <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="./css/et-line.css"> -->
 
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
 
@@ -56,12 +56,10 @@
 
 
     <div class="container">
-        <!-- <table style="height: 30px;" width="609"> -->
 
         <div class="row">
             <div class="col">
                 <img src="images/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
-               
             </div>
         </div>
 
