--- a/index.html
+++ b/index.html
@@ -110,38 +110,42 @@
             </div>
 
         </div>
-        <tr>
-            <td style="width: 130px;">
+        <div class="row">
+
+            <div class="col">
                 <p style="text-align: center;"><a href="https://assetstore.unity.com/" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/unitylogo.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="https://assetstore.unity.com/" target="_blank"
                         rel="noopener noreferrer">UnityAsset</a></p>
-            </td>
-            <td style="width: 137.667px;">
+            </div>
+
+            <div class="col">
                 <p><a href="https://olivier-roland.com/" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/olivier_roland.png" width="57" height="57" /></a></p>
                 <p style="text-align: center;"><a href="https://olivier-roland.com/" target="_blank"
                         rel="noopener noreferrer">Olivier Rolland </a></p>
-            </td>
-            <td style="width: 137.667px;" colspan="2" rowspan="3"><img src="images/ImagesdeFred/Alien2.png" alt="" />
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
-                        rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/towerdefense.jpg" alt="" /></a></p>
-                <p style="text-align: center;"><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro"
-                        target="_blank" rel="noopener noreferrer">TourDeSable</a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank"
-                        rel="noopener noreferrer">Vector 3D</a></p>
-            </td>
-        </tr>
+            </div>
+
+            <div class="col">
+            <img src="images/ImagesdeFred/Alien2.png" alt="" />
+        </div>
+
+            <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
+                    rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
+                        src="images/ImagesdeFred/towerdefense.jpg" alt="" /></a></p>
+            <p style="text-align: center;"><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro"
+                    target="_blank" rel="noopener noreferrer">TourDeSable</a></p>
+
+            <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" rel="noopener noreferrer"><img
+                        style="display: block; margin-left: auto; margin-right: auto;"
+                        src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
+            <p style="text-align: center;"><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank"
+                    rel="noopener noreferrer">Vector 3D</a></p>
+        </div>
+
+
         <tr>
             <td style="width: 130px;">
                 <p style="text-align: center;"><a href="https://cac3d.com/index.php" target="_blank"
