tjrs bordel lol ?

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="row">
 
-            <div class="col">
+            <div class="col-1">
                 <p style="text-align: center;"><a href="https://assetstore.unity.com/" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/unitylogo.png" alt="" /></a></p>
@@ -120,7 +120,7 @@
                         rel="noopener noreferrer">UnityAsset</a></p>
             </div>
 
-            <div class="col">
+            <div class="col-1">
                 <p><a href="https://olivier-roland.com/" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/olivier_roland.png" width="57" height="57" /></a></p>
@@ -128,54 +128,63 @@
                         rel="noopener noreferrer">Olivier Rolland </a></p>
             </div>
 
-            <div class="col">
-            <img src="images/ImagesdeFred/Alien2.png" alt="" />
+            <div class="col-4">
+                <img src="images/ImagesdeFred/Alien2.png" alt="" />
+            </div>
+
+            <div class="col-1">
+                <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
+                        rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
+                            src="images/ImagesdeFred/towerdefense.jpg" alt="" /></a></p>
+                            <p style="text-align: center;"><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
+                                rel="noopener noreferrer">Tour de Sable</a></p>
+            </div>
+
+            <div class="col-1">
+                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" rel="noopener noreferrer"><img
+                            style="display: block; margin-left: auto; margin-right: auto;"
+                            src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
+                <p style="text-align: center;"><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank"
+                        rel="noopener noreferrer">Vector 3D</a></p>
+            </div>
+
         </div>
 
-            <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
-                    rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
-                        src="images/ImagesdeFred/towerdefense.jpg" alt="" /></a></p>
-            <p style="text-align: center;"><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro"
-                    target="_blank" rel="noopener noreferrer">TourDeSable</a></p>
 
-            <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" rel="noopener noreferrer"><img
-                        style="display: block; margin-left: auto; margin-right: auto;"
-                        src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
-            <p style="text-align: center;"><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank"
-                    rel="noopener noreferrer">Vector 3D</a></p>
-        </div>
-
-
-        <tr>
-            <td style="width: 130px;">
+        <div class="col-1">
                 <p style="text-align: center;"><a href="https://cac3d.com/index.php" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/sw9.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="https://cac3d.com/index.php" target="_blank"
                         rel="noopener noreferrer">Cote-a-cas</a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.maitrejedi.com/" target="_blank" rel="noopener noreferrer"><img
+                    </div>
+
+                    <div class="col-1">
+                               <p><a href="http://www.maitrejedi.com/" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/sw11.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="http://www.maitrejedi.com/" target="_blank"
                         rel="noopener noreferrer">MaitreJedi </a></p>
-            </td>
-            <td style="width: 137.667px;">
+                    </div>
+                    <div class="col-4">
+                    </div>
+
+                    <div class="col-1">
                 <p><a href="http://www.rawkins.com/games/dolphin-olympics-2/" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/dauphin2.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="http://www.rawkins.com/games/dolphin-olympics-2/"
                         target="_blank" rel="noopener noreferrer">LeDauphin </a></p>
-            </td>
-            <td style="width: 137.667px;">
+                    </div>
+
+                    <div class="col-1">  
                 <p><a href="http://www.eyezmaze.com/" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/cube.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="http://www.eyezmaze.com/" target="_blank"
                         rel="noopener noreferrer">LeCube </a></p>
-            </td>
-        </tr>
+                    </div>
+
         <tr>
             <td style="width: 130px;">
                 <p><a href="https://mail.google.com/mail/" target="_blank" rel="noopener noreferrer"><img
