--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="row">
 
-            <div class="col-1">
+            <div class="col-2">
                 <p style="text-align: center;"><a href="https://assetstore.unity.com/" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/unitylogo.png" alt="" /></a></p>
@@ -120,7 +120,7 @@
                         rel="noopener noreferrer">UnityAsset</a></p>
             </div>
 
-            <div class="col-1">
+            <div class="col-2">
                 <p><a href="https://olivier-roland.com/" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/olivier_roland.png" width="57" height="57" /></a></p>
@@ -129,18 +129,18 @@
             </div>
 
             <div class="col-4">
-                <img src="images/ImagesdeFred/Alien2.png" alt="" />
+                <img src="images/ImagesdeFred/Alien2.png" alt="Images Alien" />
             </div>
 
-            <div class="col-1">
+            <div class="col-2">
                 <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/towerdefense.jpg" alt="" /></a></p>
-                            <p style="text-align: center;"><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
-                                rel="noopener noreferrer">Tour de Sable</a></p>
+                <p style="text-align: center;"><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro"
+                        target="_blank" rel="noopener noreferrer">Tour de Sable</a></p>
             </div>
 
-            <div class="col-1">
+            <div class="col-2">
                 <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
@@ -150,40 +150,43 @@
 
         </div>
 
+        <div class="row">
 
-        <div class="col-1">
+            <div class="col-2">
                 <p style="text-align: center;"><a href="https://cac3d.com/index.php" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/sw9.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="https://cac3d.com/index.php" target="_blank"
                         rel="noopener noreferrer">Cote-a-cas</a></p>
-                    </div>
+            </div>
 
-                    <div class="col-1">
-                               <p><a href="http://www.maitrejedi.com/" target="_blank" rel="noopener noreferrer"><img
+            <div class="col-2">
+                <p><a href="http://www.maitrejedi.com/" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/sw11.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="http://www.maitrejedi.com/" target="_blank"
                         rel="noopener noreferrer">MaitreJedi </a></p>
-                    </div>
-                    <div class="col-4">
-                    </div>
+            </div>
+            <div class="col-4">
+            </div>
 
-                    <div class="col-1">
+            <div class="col-2">
                 <p><a href="http://www.rawkins.com/games/dolphin-olympics-2/" target="_blank"
                         rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/dauphin2.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="http://www.rawkins.com/games/dolphin-olympics-2/"
                         target="_blank" rel="noopener noreferrer">LeDauphin </a></p>
-                    </div>
+            </div>
 
-                    <div class="col-1">  
+            <div class="col-2">
                 <p><a href="http://www.eyezmaze.com/" target="_blank" rel="noopener noreferrer"><img
                             style="display: block; margin-left: auto; margin-right: auto;"
                             src="images/ImagesdeFred/cube.png" alt="" /></a></p>
                 <p style="text-align: center;"><a href="http://www.eyezmaze.com/" target="_blank"
                         rel="noopener noreferrer">LeCube </a></p>
-                    </div>
+            </div>
+        </div>
+
 
         <tr>
             <td style="width: 130px;">
