Enleve l'ancien css inclus dans le html pour le remettre plus tard  plus propre

--- a/index.html
+++ b/index.html
@@ -113,19 +113,13 @@
         <div class="row">
 
             <div class="col-2">
-                <p style="text-align: center;"><a href="https://assetstore.unity.com/" target="_blank"
-                        rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/unitylogo.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="https://assetstore.unity.com/" target="_blank"
-                        rel="noopener noreferrer">UnityAsset</a></p>
+                <p><a href="https://assetstore.unity.com/" target="_blank" ><img src="images/ImagesdeFred/unitylogo.png" width="57" height="57" /></a></p>
+              <a href="https://assetstore.unity.com/" target="_blank" >UnityAsset</a></p>
             </div>
 
             <div class="col-2">
-                <p><a href="https://olivier-roland.com/" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/olivier_roland.png" width="57" height="57" /></a></p>
-                <p style="text-align: center;"><a href="https://olivier-roland.com/" target="_blank"
-                        rel="noopener noreferrer">Olivier Rolland </a></p>
+                <p><a href="https://olivier-roland.com/" target="_blank" ><img src="images/ImagesdeFred/olivier_roland.png" width="57" height="57" /></a></p>
+                <a href="https://olivier-roland.com/" target="_blank">Olivier Rolland </a></p>
             </div>
 
             <div class="col-4">
