Grr Ma Femme m'appelle

--- a/index.html
+++ b/index.html
@@ -127,19 +127,14 @@
             </div>
 
             <div class="col-2">
-                <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"
-                        rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/towerdefense.jpg" alt="" /></a></p>
-                <p style="text-align: center;"><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro"
-                        target="_blank" rel="noopener noreferrer">Tour de Sable</a></p>
+                <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank" ><img src="images/ImagesdeFred/towerdefense.jpg" width="57" height="57" /></a></p>
+                <p> <a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro"
+                        target="_blank" >Tour de Sable</a></p>
             </div>
 
             <div class="col-2">
-                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank"
-                        rel="noopener noreferrer">Vector 3D</a></p>
+                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" ><img src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
+                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" >Vector 3D</a></p>
             </div>
 
         </div>
