--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
 
     <div class="container">
 
-        <div class="row">
+        <div class="row ">
             <div class="col">
-                <img src="images/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
+                <div class= "logo">
+                    <img src="images/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
+                </div>
+               
             </div>
         </div>
 
