--- a/index.html
+++ b/index.html
@@ -50,19 +50,29 @@
 
     <title>Entrainement Bootstrap - </title>
 
+    <!-- Background image -->
+<div class="bg-image" style="
+background-image: url('images/page_gradient.png');
+height: 100vh;
+background-color: blue;
+"></div>
+<!-- Background image -->
+
 </head>
 
 <body>
+
+
 
 
     <div class="container">
 
         <div class="row ">
             <div class="col">
-                <div class= "logo">
+                <div class="logo">
                     <img src="images/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
                 </div>
-               
+
             </div>
         </div>
 
@@ -116,12 +126,14 @@
         <div class="row">
 
             <div class="col-2">
-                <p><a href="https://assetstore.unity.com/" target="_blank" ><img src="images/ImagesdeFred/unitylogo.png" width="57" height="57" /></a></p>
-              <a href="https://assetstore.unity.com/" target="_blank" >UnityAsset</a></p>
+                <p><a href="https://assetstore.unity.com/" target="_blank"><img src="images/ImagesdeFred/unitylogo.png"
+                            width="57" height="57" /></a></p>
+                <a href="https://assetstore.unity.com/" target="_blank">UnityAsset</a></p>
             </div>
 
             <div class="col-2">
-                <p><a href="https://olivier-roland.com/" target="_blank" ><img src="images/ImagesdeFred/olivier_roland.png" width="57" height="57" /></a></p>
+                <p><a href="https://olivier-roland.com/" target="_blank"><img
+                            src="images/ImagesdeFred/olivier_roland.png" width="57" height="57" /></a></p>
                 <a href="https://olivier-roland.com/" target="_blank">Olivier Rolland </a></p>
             </div>
 
@@ -130,14 +142,16 @@
             </div>
 
             <div class="col-2">
-                <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank" ><img src="images/ImagesdeFred/towerdefense.jpg" width="57" height="57" /></a></p>
-                <p> <a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro"
-                        target="_blank" >Tour de Sable</a></p>
+                <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"><img
+                            src="images/ImagesdeFred/towerdefense.jpg" width="57" height="57" /></a></p>
+                <p> <a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank">Tour de
+                        Sable</a></p>
             </div>
 
             <div class="col-2">
-                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" ><img src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
-                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank" >Vector 3D</a></p>
+                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank"><img
+                            src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
+                <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank">Vector 3D</a></p>
             </div>
 
         </div>
