--- a/index.html
+++ b/index.html
@@ -50,13 +50,9 @@
 
     <title>Entrainement Bootstrap - </title>
 
-    <!-- Background image -->
-<div class="bg-image" style="
-background-image: url('images/page_gradient.png');
-height: 100vh;
-background-color: blue;
-"></div>
-<!-- Background image -->
+
+
+
 
 </head>
 
@@ -65,8 +61,15 @@ background-color: blue;
 
 
 
-    <div class="container">
 
+    <div class="container">
+        
+<!-- Background image -->
+<div class="bg-image" 
+     style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
+            height: 100vh">
+</div>
+<!-- Background image -->
         <div class="row ">
             <div class="col">
                 <div class="logo">
@@ -194,87 +197,68 @@ background-color: blue;
         </div>
 
 
-        <tr>
-            <td style="width: 130px;">
-                <p><a href="https://mail.google.com/mail/" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/gmail.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="https://mail.google.com/mail/" target="_blank"
-                        rel="noopener noreferrer">Gmail </a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="https://www.icloud.com/" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/mmicone.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="https://www.icloud.com/" target="_blank"
-                        rel="noopener noreferrer">ICloud </a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank"
-                        rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/ageofwar.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank"
-                        rel="noopener noreferrer">AgeOfWar </a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank"
-                        rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/dicewars.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank"
-                        rel="noopener noreferrer">DiceWar </a></p>
-            </td>
-        </tr>
-        <tr>
-            <td style="width: 130px;">
-                <p><a href="https://www.viedemerde.fr/" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/viedemerde.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="https://www.viedemerde.fr/" target="_blank"
-                        rel="noopener noreferrer">VieDeMerde </a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/facebook.png" alt="" /></a></p>
-                <p style="text-align: center;"><a href="https://www.facebook.com/" target="_blank"
-                        rel="noopener noreferrer">FaceBook </a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.schlunks.software" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/Icone1.png" width="57" height="57" /></a></p>
-                <p style="text-align: center;"><a href="http://www.schlunks.software" target="_blank"
-                        rel="noopener noreferrer">SchlunksSoftware </a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.monrouleaudepq.com" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/pq2.png" width="57" height="57" /></a></p>
-                <p style="text-align: center;"><a href="http://www.monrouleaudepq.com" target="_blank"
-                        rel="noopener noreferrer">MonRouleaudePQ </a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.kikakou.com" target="_blank" rel="noopener noreferrer"><img
-                            style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/kikakou.png" width="51" height="51" /></a></p>
-                <p style="text-align: center;"><a href="http://www.kikakou.com" target="_blank"
-                        rel="noopener noreferrer">KiKaKou</a></p>
-            </td>
-            <td style="width: 137.667px;">
-                <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank"
-                        rel="noopener noreferrer"><img style="display: block; margin-left: auto; margin-right: auto;"
-                            src="images/ImagesdeFred/nanp.gif" alt="" /></a></p>
-                <p style="text-align: center;"><a href="http://www.kongregate.com/games/badben/nano-war-2"
-                        target="_blank" rel="noopener noreferrer">NanoWar </a></p>
-            </td>
-        </tr>
-        </tbody>
-        </table>
-        </td>
-        </tr>
-        </tbody>
-        </table>
-        <p> </p>
+
+        <p><a href="https://mail.google.com/mail/" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;" src="images/ImagesdeFred/gmail.png"
+                    alt="" /></a></p>
+        <p style="text-align: center;"><a href="https://mail.google.com/mail/" target="_blank"
+                rel="noopener noreferrer">Gmail </a></p>
+
+        <p><a href="https://www.icloud.com/" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;" src="images/ImagesdeFred/mmicone.png"
+                    alt="" /></a></p>
+        <p style="text-align: center;"><a href="https://www.icloud.com/" target="_blank"
+                rel="noopener noreferrer">ICloud </a></p>
+
+        <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;"
+                    src="images/ImagesdeFred/ageofwar.png" alt="" /></a></p>
+        <p style="text-align: center;"><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank"
+                rel="noopener noreferrer">AgeOfWar </a></p>
+
+        <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;"
+                    src="images/ImagesdeFred/dicewars.png" alt="" /></a></p>
+        <p style="text-align: center;"><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank"
+                rel="noopener noreferrer">DiceWar </a></p>
+
+
+        <p><a href="https://www.viedemerde.fr/" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;"
+                    src="images/ImagesdeFred/viedemerde.png" alt="" /></a></p>
+        <p style="text-align: center;"><a href="https://www.viedemerde.fr/" target="_blank"
+                rel="noopener noreferrer">VieDeMerde </a></p>
+
+        <p><a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;"
+                    src="images/ImagesdeFred/facebook.png" alt="" /></a></p>
+        <p style="text-align: center;"><a href="https://www.facebook.com/" target="_blank"
+                rel="noopener noreferrer">FaceBook </a></p>
+
+        <p><a href="http://www.schlunks.software" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;" src="images/ImagesdeFred/Icone1.png"
+                    width="57" height="57" /></a></p>
+        <p style="text-align: center;"><a href="http://www.schlunks.software" target="_blank"
+                rel="noopener noreferrer">SchlunksSoftware </a></p>
+
+        <p><a href="http://www.monrouleaudepq.com" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;" src="images/ImagesdeFred/pq2.png"
+                    width="57" height="57" /></a></p>
+        <p style="text-align: center;"><a href="http://www.monrouleaudepq.com" target="_blank"
+                rel="noopener noreferrer">MonRouleaudePQ </a></p>
+
+        <p><a href="http://www.kikakou.com" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;" src="images/ImagesdeFred/kikakou.png"
+                    width="51" height="51" /></a></p>
+        <p style="text-align: center;"><a href="http://www.kikakou.com" target="_blank"
+                rel="noopener noreferrer">KiKaKou</a></p>
+
+        <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank" rel="noopener noreferrer"><img
+                    style="display: block; margin-left: auto; margin-right: auto;" src="images/ImagesdeFred/nanp.gif"
+                    alt="" /></a></p>
+        <p style="text-align: center;"><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank"
+                rel="noopener noreferrer">NanoWar </a></p>
+
 
 
 
