Moche Mais ca marche

--- a/test.html
+++ b/test.html
@@ -17,6 +17,15 @@
       <title>Info School</title>
   </head>
   <body>
+
+    <!-- Background image -->
+<div class="bg-image" style="
+background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.webp');
+height: 100vh;
+"></div>
+<!-- Background image -->
+
+
     <div class="container">
       <div class="row">
         <div class="col">
