Style2 Maintenant prioritaire superclass

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
     <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
-    <link rel="stylesheet" type="text/css" href="style2.css">
+
     <!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css"> -->
 
@@ -41,7 +41,7 @@
     <!-- Je vais essayer en version 5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="style2.css">
 
 
 
@@ -67,7 +67,7 @@
 
         <!-- Background image -->
         <div class="bg-image" style="background-image: url('images/page_gradient.png');
-        height: 100vh; background-color: #082933; background-repeat: no-repeat;">
+        height: 100vh; background-color: #0f4151; background-repeat: no-repeat;">
 
             <div class=" row">
                 <div class="col">
