Mon ECommerce va avoir de la gueule

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
 <body>
 
     <div class="container-fluid">
-
+        
         <!-- Background image -->
         <!-- J'ai bien galéré mais j'ai compris c'est le principal  -->
 
         <div class="bg-image" style="background-image: url('images/page_gradient.png');
         height: 100vh; background-color: #0f4151; background-repeat: no-repeat;">
 
-            <!-- <div class="row"> -->
-            <!-- <div class="col"> -->
-            <div class="logo">
-                <img src="images/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
-            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="logo">
+                        <img src="images/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
+                    </div>
 
-            <!-- </div> -->
-            <!-- </div> -->
+                </div>
+            </div>
 
             <div class="row">
 
@@ -87,8 +87,7 @@
                 </div>
 
                 <div class="col">
-                    <p><a href="https://www.elephorm.com/" target="_blank"><img
-                        src="images/ImagesdeFred/elephorm.png"
+                    <p><a href="https://www.elephorm.com/" target="_blank"><img src="images/ImagesdeFred/elephorm.png"
                                 alt="" /></a></p>
                     <p><a href="https://www.elephorm.com/" target="_blank">Elephorm</a></p>
                 </div>
@@ -185,18 +184,26 @@
 
                 </div>
 
-                <p><a href="https://www.icloud.com/" target="_blank"><img src="images/ImagesdeFred/mmicone.png"
-                            alt="" /></a></p>
-                <p><a href="https://www.icloud.com/" target="_blank">ICloud </a></p>
+                <div class="col-2">
+                    <p><a href="https://www.icloud.com/" target="_blank"><img src="images/ImagesdeFred/mmicone.png"
+                                alt="" /></a></p>
+                    <p><a href="https://www.icloud.com/" target="_blank">ICloud </a></p>
+                </div>
 
-                <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank"><img
-                            src="images/ImagesdeFred/ageofwar.png" alt="" /></a></p>
-                <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank">AgeOfWar </a></p>
+                <div class="col-4">
+                </div>
 
-                <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank"><img
-                            src="images/ImagesdeFred/dicewars.png" alt="" /></a></p>
-                <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank">DiceWar </a></p>
+                <div class="col-2">
+                    <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank"><img
+                                src="images/ImagesdeFred/ageofwar.png" alt="" /></a></p>
+                    <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank">AgeOfWar </a></p>
+                </div>
 
+                <div class="col-2">
+                    <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank"><img
+                                src="images/ImagesdeFred/dicewars.png" alt="" /></a></p>
+                    <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank">DiceWar </a></p>
+                </div>
 
                 <p><a href="https://www.viedemerde.fr/" target="_blank"><img src="images/ImagesdeFred/viedemerde.png"
                             alt="" /></a></p>
