--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
 <body>
 
-    <div class="container-fluid">
-        
+    <div class="container-fluid text-center">
+
         <!-- Background image -->
         <!-- J'ai bien galéré mais j'ai compris c'est le principal  -->
 
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="col-4">
-                    <img src="images/ImagesdeFred/Alienen57.png" alt="Images Alien" />
+
                 </div>
 
                 <div class="col-2">
@@ -160,6 +160,7 @@
                     <p><a href="http://www.maitrejedi.com/" target="_blank">MaitreJedi </a></p>
                 </div>
                 <div class="col-4">
+                    <img src="images/ImagesdeFred/Alien2.png" alt="Images Alien" />
                 </div>
 
                 <div class="col-2">
@@ -204,58 +205,69 @@
                                 src="images/ImagesdeFred/dicewars.png" alt="" /></a></p>
                     <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank">DiceWar </a></p>
                 </div>
-
-                <p><a href="https://www.viedemerde.fr/" target="_blank"><img src="images/ImagesdeFred/viedemerde.png"
-                            alt="" /></a></p>
-                <p><a href="https://www.viedemerde.fr/" target="_blank">VieDeMerde </a></p>
-
-                <p><a href="https://www.facebook.com/" target="_blank"><img src="images/ImagesdeFred/facebook.png"
-                            alt="" /></a></p>
-                <p><a href="https://www.facebook.com/" target="_blank">FaceBook </a></p>
-
-                <p><a href="http://www.schlunks.software" target="_blank"><img
-                            src="images/ImagesdeFred/Icone1.png" /></a></p>
-                <p><a href="http://www.schlunks.software" target="_blank">SchlunksSoftware </a></p>
-
-                <p><a href="http://www.monrouleaudepq.com" target="_blank"><img src="images/ImagesdeFred/pq2.png" /></a>
-                </p>
-                <p><a href="http://www.monrouleaudepq.com" target="_blank">MonRouleaudePQ </a></p>
-
-                <p><a href="http://www.kikakou.com" target="_blank"><img src="images/ImagesdeFred/kikakou.png"
-                            width="51" height="51" /></a></p>
-                <p><a href="http://www.kikakou.com" target="_blank">KiKaKou</a></p>
-
-                <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank"><img
-                            src="images/ImagesdeFred/nanp.gif" alt="" /></a></p>
-                <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank">NanoWar </a></p>
-
-
-
-
             </div>
 
+            <div class="row">
+                <div class="col">
+                    <p><a href="https://www.viedemerde.fr/" target="_blank"><img
+                                src="images/ImagesdeFred/viedemerde.png" alt="" /></a></p>
+                    <p><a href="https://www.viedemerde.fr/" target="_blank">VieDeMerde </a></p>
+                </div>
+
+                <div class="col">
+                    <p><a href="https://www.facebook.com/" target="_blank"><img src="images/ImagesdeFred/facebook.png"
+                                alt="" /></a></p>
+                    <p><a href="https://www.facebook.com/" target="_blank">FaceBook </a></p>
+                </div>
+
+                <div class="col">
+                    <p><a href="http://www.schlunks.software" target="_blank"><img
+                                src="images/ImagesdeFred/Icone1.png" /></a>
+                    </p>
+                    <p><a href="http://www.schlunks.software" target="_blank">SchlunksSoftware </a></p>
+                </div>
+
+                <div class="col">
+                    <p><a href="http://www.monrouleaudepq.com" target="_blank"><img
+                                src="images/ImagesdeFred/pq2.png" /></a>
+                    </p>
+                    <p><a href="http://www.monrouleaudepq.com" target="_blank">MonRouleaudePQ </a></p>
+                </div>
+
+                <div class="col">
+                    <p><a href="http://www.kikakou.com" target="_blank"><img src="images/ImagesdeFred/kikakou.png"
+                                width="51" height="51" /></a></p>
+                    <p><a href="http://www.kikakou.com" target="_blank">KiKaKou</a></p>
+                </div>
+
+                <div class="col">
+                    <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank"><img
+                                src="images/ImagesdeFred/nanp.gif" alt="" /></a></p>
+                    <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank">NanoWar </a></p>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <!-- Pour pourvoir utiliser Bootstrap 5 test fred avec JsQuery et les CDN et de Bootstrap  -->
-            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-                integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-                crossorigin="anonymous">
-            </script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                crossorigin="anonymous">
-            </script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
-                integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
-                crossorigin="anonymous">
-            </script>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <!-- Pour pourvoir utiliser Bootstrap 5 test fred avec JsQuery et les CDN et de Bootstrap  -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+            integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous">
+        </script>
 
 
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
 </body>
