Preparation Demain avec Logo Moche

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <!-- Background image -->
         <!-- J'ai bien galéré mais j'ai compris c'est le principal  -->
 
-        <div class="bg-image" style="background-image: url('images/page_gradient.png');
+        <div class="bg-image" style="background-image: url('imagesFred/page_gradient.png');
         height: 100vh; background-color: #0f4151; background-repeat: no-repeat;">
 
             <div class="row">
                 <div class="col">
                     <div class="logo">
-                        <img src="images/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
+                        <img src="imagesFred/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
                     </div>
 
                 </div>
@@ -75,39 +75,39 @@
 
                 <div class="col">
                     <p><a href="https://developer.apple.com/" target="_blank"><img
-                                src="images/ImagesdeFred/xcodeicone.png" /></a></p>
+                                src="imagesFred/ImagesdeFred/xcodeicone.png" /></a></p>
                     <p><a href="https://developer.apple.com/" target="_blank">AppleDevelopper</a>
                     </p>
                 </div>
 
                 <div class="col">
                     <p><a href="https://cocoacafe.fr/" target="_blank"><img
-                                src="images/ImagesdeFred/cocoacafe.png" /></a></p>
+                                src="imagesFred/ImagesdeFred/cocoacafe.png" /></a></p>
                     <p><a href="https://cocoacafe.fr/" target="_blank">Cocoacafe </a></p>
                 </div>
 
                 <div class="col">
-                    <p><a href="https://www.elephorm.com/" target="_blank"><img src="images/ImagesdeFred/elephorm.png"
+                    <p><a href="https://www.elephorm.com/" target="_blank"><img src="imagesFred/ImagesdeFred/elephorm.png"
                                 alt="" /></a></p>
                     <p><a href="https://www.elephorm.com/" target="_blank">Elephorm</a></p>
                 </div>
 
                 <div class="col">
                     <p><a href="https://cartoonsmart.com/" target="_blank"><img
-                                src="images/ImagesdeFred/codeteacher.png" /></a></p>
+                                src="imagesFred/ImagesdeFred/codeteacher.png" /></a></p>
                     <p><a href="https://cartoonsmart.com/" target="_blank">CartoonSmart </a></p>
                 </div>
 
                 <div class="col">
                     <p><a href="https://www.cocos.com/en/" target="_blank"><img
-                                src="images/ImagesdeFred/cocos2d.png" /></a></p>
+                                src="imagesFred/ImagesdeFred/cocos2d.png" /></a></p>
                     <p><a href="https://www.cocos.com/en/" target="_blank">Cocos2D</a></p>
                 </div>
 
 
                 <div class="col">
                     <p><a href="https://openclassrooms.com/fr/" target="_blank"><img
-                                src="images/ImagesdeFred/logoopenclassroom.png" /></a></p>
+                                src="imagesFred/ImagesdeFred/logoopenclassroom.png" /></a></p>
                     <p><a href="https://openclassrooms.com/fr/" target="_blank">ClassRoom </a>
                     </p>
                 </div>
@@ -117,13 +117,13 @@
 
                 <div class="col-2">
                     <p><a href="https://assetstore.unity.com/" target="_blank"><img
-                                src="images/ImagesdeFred/unitylogo.png" /></a></p>
+                                src="imagesFred/ImagesdeFred/unitylogo.png" /></a></p>
                     <p><a href="https://assetstore.unity.com/" target="_blank">UnityAsset</a></p>
                 </div>
 
                 <div class="col-2">
                     <p><a href="https://olivier-roland.com/" target="_blank"><img
-                                src="images/ImagesdeFred/olivier_roland.png" /></a></p>
+                                src="imagesFred/ImagesdeFred/olivier_roland.png" /></a></p>
                     <p> <a href="https://olivier-roland.com/" target="_blank">Olivier Rolland </a></p>
                 </div>
 
@@ -133,14 +133,14 @@
 
                 <div class="col-2">
                     <p><a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank"><img
-                                src="images/ImagesdeFred/towerdefense.jpg" /></a></p>
+                                src="imagesFred/ImagesdeFred/towerdefense.jpg" /></a></p>
                     <p> <a href="http://www.kongregate.com/games/casualcollective/desktop-td-pro" target="_blank">Tour
                             de Sable</a></p>
                 </div>
 
                 <div class="col-2">
                     <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank"><img
-                                src="images/ImagesdeFred/Vector3d.png" alt="" /></a></p>
+                                src="imagesFred/ImagesdeFred/Vector3d.png" alt="" /></a></p>
                     <p><a href="https://www.jeuxclic.com/jeux.php?id=14932" target="_blank">Vector 3D</a></p>
                 </div>
 
@@ -149,28 +149,28 @@
             <div class="row">
 
                 <div class="col-2">
-                    <p><a href="https://cac3d.com/index.php" target="_blank"><img src="images/ImagesdeFred/sw9.png"
+                    <p><a href="https://cac3d.com/index.php" target="_blank"><img src="imagesFred/ImagesdeFred/sw9.png"
                                 alt="" /></a></p>
                     <p><a href="https://cac3d.com/index.php" target="_blank">Cote-a-cas</a></p>
                 </div>
 
                 <div class="col-2">
-                    <p><a href="http://www.maitrejedi.com/" target="_blank"><img src="images/ImagesdeFred/sw11.png"
+                    <p><a href="http://www.maitrejedi.com/" target="_blank"><img src="imagesFred/ImagesdeFred/sw11.png"
                                 alt="" /></a></p>
                     <p><a href="http://www.maitrejedi.com/" target="_blank">MaitreJedi </a></p>
                 </div>
                 <div class="col-4">
-                    <img src="images/ImagesdeFred/Alien2.png" alt="Images Alien" />
+                    <img src="imagesFred/ImagesdeFred/Alien2.png" alt="Images Alien" />
                 </div>
 
                 <div class="col-2">
                     <p><a href="http://www.rawkins.com/games/dolphin-olympics-2/" target="_blank"><img
-                                src="images/ImagesdeFred/dauphin2.png" alt="" /></a></p>
+                                src="imagesFred/ImagesdeFred/dauphin2.png" alt="" /></a></p>
                     <p><a href="http://www.rawkins.com/games/dolphin-olympics-2/" target="_blank">LeDauphin </a></p>
                 </div>
 
                 <div class="col-2">
-                    <p><a href="http://www.eyezmaze.com/" target="_blank"><img src="images/ImagesdeFred/cube.png"
+                    <p><a href="http://www.eyezmaze.com/" target="_blank"><img src="imagesFred/ImagesdeFred/cube.png"
                                 alt="" /></a></p>
                     <p><a href="http://www.eyezmaze.com/" target="_blank">LeCube </a></p>
                 </div>
@@ -179,14 +179,14 @@
 
             <div class="row">
                 <div class="col-2">
-                    <p><a href="https://mail.google.com/mail/" target="_blank"><img src="images/ImagesdeFred/gmail.png"
+                    <p><a href="https://mail.google.com/mail/" target="_blank"><img src="imagesFred/ImagesdeFred/gmail.png"
                                 alt="" /></a></p>
                     <p><a href="https://mail.google.com/mail/" target="_blank">Gmail </a></p>
 
                 </div>
 
                 <div class="col-2">
-                    <p><a href="https://www.icloud.com/" target="_blank"><img src="images/ImagesdeFred/mmicone.png"
+                    <p><a href="https://www.icloud.com/" target="_blank"><img src="imagesFred/ImagesdeFred/mmicone.png"
                                 alt="" /></a></p>
                     <p><a href="https://www.icloud.com/" target="_blank">ICloud </a></p>
                 </div>
@@ -196,13 +196,13 @@
 
                 <div class="col-2">
                     <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank"><img
-                                src="images/ImagesdeFred/ageofwar.png" alt="" /></a></p>
+                                src="imagesFred/ImagesdeFred/ageofwar.png" alt="" /></a></p>
                     <p><a href="http://www.maxgames.com/play/age-of-war-2.html" target="_blank">AgeOfWar </a></p>
                 </div>
 
                 <div class="col-2">
                     <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank"><img
-                                src="images/ImagesdeFred/dicewars.png" alt="" /></a></p>
+                                src="imagesFred/ImagesdeFred/dicewars.png" alt="" /></a></p>
                     <p><a href="http://www.gamedesign.jp/flash/dice/dice.html" target="_blank">DiceWar </a></p>
                 </div>
             </div>
@@ -210,39 +210,39 @@
             <div class="row">
                 <div class="col">
                     <p><a href="https://www.viedemerde.fr/" target="_blank"><img
-                                src="images/ImagesdeFred/viedemerde.png" alt="" /></a></p>
+                                src="imagesFred/ImagesdeFred/viedemerde.png" alt="" /></a></p>
                     <p><a href="https://www.viedemerde.fr/" target="_blank">VieDeMerde </a></p>
                 </div>
 
                 <div class="col">
-                    <p><a href="https://www.facebook.com/" target="_blank"><img src="images/ImagesdeFred/facebook.png"
+                    <p><a href="https://www.facebook.com/" target="_blank"><img src="imagesFred/ImagesdeFred/facebook.png"
                                 alt="" /></a></p>
                     <p><a href="https://www.facebook.com/" target="_blank">FaceBook </a></p>
                 </div>
 
                 <div class="col">
                     <p><a href="http://www.schlunks.software" target="_blank"><img
-                                src="images/ImagesdeFred/Icone1.png" /></a>
+                                src="imagesFred/ImagesdeFred/Icone1.png" /></a>
                     </p>
                     <p><a href="http://www.schlunks.software" target="_blank">SchlunksSoftware </a></p>
                 </div>
 
                 <div class="col">
                     <p><a href="http://www.monrouleaudepq.com" target="_blank"><img
-                                src="images/ImagesdeFred/pq2.png" /></a>
+                                src="imagesFred/ImagesdeFred/pq2.png" /></a>
                     </p>
                     <p><a href="http://www.monrouleaudepq.com" target="_blank">MonRouleaudePQ </a></p>
                 </div>
 
                 <div class="col">
-                    <p><a href="http://www.kikakou.com" target="_blank"><img src="images/ImagesdeFred/kikakou.png"
+                    <p><a href="http://www.kikakou.com" target="_blank"><img src="imagesFred/ImagesdeFred/kikakou.png"
                                 width="51" height="51" /></a></p>
                     <p><a href="http://www.kikakou.com" target="_blank">KiKaKou</a></p>
                 </div>
 
                 <div class="col">
                     <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank"><img
-                                src="images/ImagesdeFred/nanp.gif" alt="" /></a></p>
+                                src="imagesFred/ImagesdeFred/nanp.gif" alt="" /></a></p>
                     <p><a href="http://www.kongregate.com/games/badben/nano-war-2" target="_blank">NanoWar </a></p>
 
                 </div>
