--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <!-- J'ai bien galéré mais j'ai compris c'est le principal  -->
 
         <div class="bg-image" style="background-image: url('imagesFred/page_gradient.png');
-        height: 100vh; background-color: #0f4151; background-repeat: no-repeat;">
+        height: 100vh; background-color: #f3e9f1; background-repeat: no-repeat;">
 
             <div class="row">
                 <div class="col">
                     <div class="logo">
-                        <img src="imagesFred/ImagesdeFred/SchlunksLogo.png" alt="Mon Logo" />
+                        <img src="logoententemoche.png" alt="Mon Logo" />
                     </div>
 
                 </div>
